tested execing from storage; successful

--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,7 @@
   <asset name="bootstrap-transition" version="2.0" checksum="checksum3" dependencies="jquery" src="//www.lclark.edu/core/libs/bootstrap/js/bootstrap-transition.js"></asset>
   <asset name="bootstrap-collapse" version="2.0" checksum="checksum4" dependencies="jquery-ui-bootstrap" src="//www.lclark.edu/core/libs/bootstrap/js/bootstrap-collapse.js"></asset>
 
-  <script src="../juice.js"></script>
+  <script src="../juice.js?11"></script>
 
 </head>
 <body>
